samples/_failures_safe/1761208217_53c9b4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f1a95160.c: In function ‘main’:
./samples/SAFE/__tmp_f1a95160.c:154:16: error: expected ‘;’ at end of input
  154 |     buffer_free
      |                ^
      |                ;
./samples/SAFE/__tmp_f1a95160.c:154:5: error: expected declaration or statement at end of input
  154 |     buffer_free
      |     ^~~~~~~~~~~
